Mubbi: Fixed the spacing issue between logo section and products section. Made the products in product section look nicer. Moved the buttons a bit in locations/about section

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
 
 /* GENERAL ELEMENTS */
 .section {
-    padding: 18rem 3rem;
+    padding: 16rem 3rem;
     /*border-top: 1px solid #022539;*/
 
     transition: transform 1s, opacity 1s;
@@ -43,7 +43,7 @@ body {
 }
 
 .sectionProducts {
-    padding: 20rem 3rem;
+    padding: 12rem 3rem;
     /*border-top: 1px solid #022539;*/
     background: linear-gradient(  #022539, #0f3b56,  #46b7a1);
 
@@ -52,7 +52,7 @@ body {
 }
 
 .sectionAbout {
-    padding: 22rem 3rem;
+    padding: 20rem 3rem;
     /*border-top: 1px solid #022539;*/
     background: linear-gradient( #46b7a1, #6e5f98);
 
@@ -86,6 +86,7 @@ body {
     color: var(--color-primary);
     margin-bottom: 1rem;
     text-align: center;
+
 }
 
 .section__header {
@@ -130,7 +131,7 @@ body {
     cursor: pointer;
     transition: all 0.3s;
     align-content: center;
-    margin-left: 35rem;
+    margin-left: 37.5rem;
 }
 
 .btnL {
@@ -146,7 +147,7 @@ body {
     cursor: pointer;
     transition: all 0.3s;
     align-content: center;
-    margin-left: 35rem;
+    margin-left: 37.5rem;
 }
 
 .btn:hover {
@@ -253,7 +254,7 @@ i {
 /* HEADER */
 .header {
     padding: 0 3rem;
-    height: 200vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -698,11 +699,12 @@ h4 {
     width: 30vw;
 
     height: 35vw;
-    min-height: 100rem;
+    min-height: 50rem;
     min-width: 50rem;
-    padding: 3rem;
+    padding-left: 170px;
     margin: 0 auto;
     font-weight: bold;
+
 
     display: grid;
     justify-content: center;
@@ -710,7 +712,7 @@ h4 {
 }
 
 .products {
-    height: 20rem;
+    height: 30rem;
     width: 30rem;
     transition: transform .6s;
 }
@@ -723,7 +725,7 @@ h4 {
     display: grid;
     grid-gap: 4rem;
     grid-template-columns: repeat(5, 1fr);
-    justify-content: center;
+    position: center;
 }
 
 
